# nano-caf

./: .gitignore  CMakeLists.txt  README.md
include/nano-caf/: nano-caf-ns.h
include/nano-caf/core/: actor_context.h  actor_control_block.h  actor_inbox.h  actor_registry.h  actor_storage.h  actor_system.h  cache_line_size.h  coordinator.h  double_end_list.h  double_end_list_elem.h  drr_cached_queue.h  exeution_unit.h  intrusive_ptr.h  lifo_inbox.h  lifo_queue.h  lock_free_list.h  message_element.h  new_round_result.h  resumable.h  sched_actor.h  spin_lock.h  system_actor_context.h  task_list.h  thread_safe_list.h  worker.h
include/nano-caf/core/actor/: actor.h  actor_control_block.h  actor_handle.h  actor_inbox.h  actor_storage.h  actor_timer_context.h  behavior.h  behavior_based_actor.h  drr_cached_queue.h  drr_queue.h  enq_result.h  exit_reason.h  intrusive_actor_ptr.h  lifo_inbox.h  make_actor.h  message_element.h  message_id.h  on_actor_context.h  request_reply.h  requester.h  sched_actor.h  shutdown_notifier.h  task_list.h  task_result.h  task_stack.h  type_actor_handle.h  typed_actor_handle.h  wait_result.h  weak_actor_ptr.h
include/nano-caf/core/await/: abstract_future.h  abstract_future_awaiter.h  abstract_promise.h  async_object.h  awaitable_object.h  awaiter.h  awaiter_repository.h  cancellable.h  cancellable_repository.h  failure_handler.h  future.h  future_awaiter.h  future_callback.h  future_callback_base.h  future_callback_object.h  future_concept.h  future_done_notifier.h  future_object.h  future_object_base.h  future_observer.h  future_proxy_object.h  future_repository.h  multi_future.h  multi_future_awaiter.h  promise.h  promise_done_notifier.h  single_future_awaiter.h  tuple_trait.h  when_all.h  when_all_object.h
include/nano-caf/core/await/detail/: future_callback_base.h  future_callback_object.h  future_object.h  future_object_base.h  future_proxy_object.h  future_trait.h  time_guard_object.h  timer_future_object.h  tuple_trait.h  when_all_object.h
include/nano-caf/core/coroutine/: actor_promise.h  awaitable_trait.h  cancellable_timer_awaiter.h  co_actor.h  co_actor_context.h  co_actor_final_awaiter.h  co_request.h  co_task.h  co_timer.h  coro_actor.h  coro_registry.h  coro_timer.h  real_cancellable_timer_awaiter.h  timer_task.h
include/nano-caf/core/msg/: atom.h  make_message.h  message.h  message_element.h  message_field_interp.h  message_id.h  message_interp_end.h  message_trait.h  message_trait_interp.h  predefined-msgs.h  predefined_msgs_def.h  request.h  request_result_handler.h
include/nano-caf/core/thread_pool/: coordinator.h  double_end_list.h  double_end_list_elem.h  lock_free_list.h  resumable.h  thread_safe_list.h  worker.h
include/nano-caf/core/timer/: actor_timer.h  duration.h  timer_callback.h  timer_id_t.h  timer_scheduler.h  timer_set.h  timer_spec.h
include/nano-caf/util/: aggregate_fields_type.h  aggregate_reflex.h  caf_log.h  callable_trait.h  cpp_attribute.h  cv_notifier.h  disable_copy.h  either.h  intrusive_ptr.h  ipc_notifier.h  likely.h  list_element.h  macro_basic.h  macro_lock_meta_data.h  macro_meta_common.h  macro_meta_data.h  macro_pp_size.h  macro_reflex.h  macro_reflex_call.h  macro_reflex_call_2.h  macro_ro_meta_data.h  macro_struct.h  maybe.h  ptr_trait.h  random_generator.h  reflex.h  result_t.h  result_trait.h  spin_lock.h  status_t.h  suppress_warning.h  supress_warning.h  type_id_t.h  type_list.h  unit.h
script/: gen_aggregate_fields_type.py  gen_pp_size.py  gen_repeat_call.py  gen_repeat_call_2.py  gen_repeat_macros.py
src/core/: actor_control_block.cpp  actor_inbox.cpp  actor_registry.cpp  actor_system.cpp  coordinator.cpp  ddr_cached_queue.cpp  ddr_list.cpp  double_end_list.cpp  lifo_inbox.cpp  lock_free_list.cpp  sched_actor.cpp  task_list.cpp  thread_safe_list.cpp  worker.cpp
src/core/actor/: actor_context.cpp  actor_control_block.cpp  actor_handle.cpp  actor_inbox.cpp  actor_storage.cpp  ddr_cached_queue.cpp  drr_queue.cpp  intrusive_actor_ptr.cpp  lifo_inbox.cpp  sched_actor.cpp  system_actor_context.cpp  task_list.cpp  task_stack.cpp  weak_actor_ptr.cpp
src/core/await/: abstract_future_awaiter.cpp  future_object_base.cpp  future_observer.cpp
src/core/coroutine/: coro_timer.cpp  real_cancellable_timer_awaiter.cpp  timer_task.cpp
src/core/thread_pool/: coordinator.cpp  double_end_list.cpp  lock_free_list.cpp  thread_safe_list.cpp  worker.cpp
src/core/timer/: actor_timer.cpp  timer_scheduler.cpp  timer_set.cpp
tests/ft/: test_actor_system.cpp  test_async.cpp  test_coro_timer.cpp  test_job_queue.cpp  test_ping_pong.cpp
tests/ut/: TestLIFO.cpp  catch.cpp  nanobench.cpp  test_actor_inbox.cpp  test_actor_system.cpp  test_behavior.cpp  test_double_end_list.cpp  test_drr_cached_queue.cpp  test_lifo_inbox.cpp  test_lock_free_list.cpp  test_lock_meta_data.cpp  test_msg_def.h  test_msgs.h  test_promise.cpp  test_request.cpp  test_ro_meta.cpp  test_sched_actor.cpp  test_task_list.cpp  test_worker.cpp
